[package]
name = "swimmer"
version = "0.1.0" # Update html_root_url
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Thread-safe object pool type"
license = "MIT/Apache-2.0"
repository = "https://github.com/caelunshun/swimmer-rs"
readme = "README.md"
keywords = ["pool", "data-structure", "object-pool"]
categories = ["data-structures"]

[dependencies]
crossbeam = "0.7.2"

hashbrown = { version = "0.6.0", optional = true }
smallvec = { version = "0.6.10", optional = true }

[dev-dependencies]
static_assertions = "0.3.4"
lazy_static = "1.3.0"

[features]
# `Recyclable` impls for `hashbrown` crate
hashbrown-impls = ["hashbrown"]
smallvec-impls = ["smallvec"]