[package]
name = "swimmer"
version = "0.3.0" # Update html_root_url
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"
description = "Thread-safe object pool type"
license = "MIT/Apache-2.0"
repository = "https://github.com/caelunshun/swimmer-rs"
readme = "README.md"
keywords = ["pool", "data-structure", "object-pool"]
categories = ["data-structures"]

[dependencies]
thread_local = "1"

hashbrown = { version = "0.11", optional = true }
smallvec = { version = "1", optional = true }

[dev-dependencies]
static_assertions = "1"
lazy_static = "1"
criterion = "0.3"
lifeguard = "0.6.0"

[[bench]]
name = "pool"
harness = false

[features]
# `Recyclable` impls for `hashbrown` crate
hashbrown-impls = ["hashbrown"]
smallvec-impls = ["smallvec"]